# ClipVault-PublicApi-Backend

./: .dockerignore  .gitignore  Dockerfile  OAUTH_TESTING_GUIDE.md  README.md  cloudbuild.yaml  docker-compose.yml  oauth_test.html  pyproject.toml
.context/: Completed_Tasks_and_Status.md  LLD Public API.md  Project_Memory_and_Context.md  Task Breakdown for Public API.md
.github/workflows/: database.yml  deploy.yml
api/: __init__.py  main.py
api/routes/: __init__.py  auth.py  clips.py  collections.py  search.py
api/schemas/: __init__.py  auth.py  clips.py  collections.py  search.py
api/services/: __init__.py  auth.py  database.py  pubsub.py  supabase.py
db/: .gitignore  README.md  deploy.sh  sqitch.conf  sqitch.plan
db/deploy/: 01_init_tables.sql  02_indices.sql  03_rls_policies.sql
db/revert/: 01_init_tables.sql  02_indices.sql  03_rls_policies.sql
db/verify/: 01_init_tables.sql  02_indices.sql  03_rls_policies.sql
docker/: Dockerfile  Dockerfile.dev
docs/: ENVIRONMENT_SETUP.md  GITHUB_SETUP.md  INFRASTRUCTURE_SETUP.md
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: deploy.sh  test-db-connection.sh
tests/: __init__.py  test_auth.py  test_clips.py  test_clips_integration.py  test_collections.py  test_main.py  test_pubsub.py  test_search.py  test_supabase.py
